# iot_Raspberry_Pi_2026

./: README.md
work/: mainwindow.ui
work/c/: test  test.c
work/py/: .led01.py.swp  8-Bit_Drum_Pad.py  Keypad_Lcd.py  PCF8591.py  buzzer01.py  buzzer02.py  car_sensor.py  cds_led.py  dht11.py  interrupt.py  joystic01.py  joystic02.py  keypad.py  lcd.py  lcd_ultrasonic.py  led01.py  led02.py  led03.py  multiplication_table.py  organ.py  step01.py  step02.py  step03.py  temp_lcd.py  ultrasonic01.py  ultrasonic02.py  ultrasonic03.py
work/py/Flask/: app.py  app_led01.py  app_led02.py  flask01.py  flask02.py  flask03.py  flask04.py  flask05.py  test.py
work/py/Flask/templates/: index.html  led.html
work/qt/button_test/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  volum.cpp  volum.h
work/qt/text/: CMakeLists.txt
